--- a/src/compontents/styles/StyleAboutMe.scss
+++ b/src/compontents/styles/StyleAboutMe.scss
@@ -16,6 +16,7 @@
     width: 100%;
 
     .text-content {
+      margin-top: -2.5rem;
       text-align: center;
       display: flex;
       justify-content: center;
