--- a/src/compontents/styles/StyleHead.scss
+++ b/src/compontents/styles/StyleHead.scss
@@ -1,7 +1,8 @@
 .header {
   width: 100vw;
   height: 100vh;
-  background-color: #282623;
+  background-color: white;
+  /* background-color: #282623; */
   background-image: linear-gradient(to bottom, #282623);
   display: flex;
   justify-content: center;
@@ -13,33 +14,44 @@
   background-repeat: no-repeat;
   background-size: cover;
 
+
   h4 {
+    z-index: 1;
     margin-top: 10rem;
     max-width: 75%;
     text-align: start;
-    color: white;
-    font-family: 'Montserrat';
-    font-size: 2rem;
+    /* color: white; */
+    font-family: 'Gaegu', cursive;
+    font-size: 2.5rem;
     margin-bottom: 0;
+    color: rgb(49, 53, 71);
   }
 
+  
+
   h1 {
+    z-index: 1;
     margin: 0;
     max-width: 75%;
     text-align: center;
-    color: white;
-    font-family: 'Montserrat';
-    font-size: 2.8rem;
+    color: rgb(49, 53, 71);
+    font-family: 'Gaegu', cursive;
+    font-size: 3rem;
     margin-bottom: 0;
 
     span {
+      z-index: 1;
       display: inline-block;
-      color: #FC0A9D;
+      font-weight: bolder;
+      color: rgb(67, 69, 78);
+      /* color: #FC0A9D; */
       font-size: 3.5rem;
+      margin: 0;
     }
   }
 
   .andImDiv {
+    z-index: 1;
     margin-top: -1rem;
     display: flex;
     flex-direction: row;
@@ -49,15 +61,16 @@
 
     h3 {
       text-align: center;
-      color: white;
-      font-family: 'Montserrat';
+      color: rgb(49, 53, 71);
+      font-family: 'Gaegu', cursive;
       font-size: 1.5rem;
     }
       h2 {
         font-size: 1.5rem;
         padding: 4px 12px;
-        font-family: 'Montserrat';
-        color: #FC0A9D;
+        color: rgb(49, 53, 71);
+        font-family: 'Gaegu', cursive;
+        /* color: #FC0A9D; */
         white-space: nowrap;
         overflow: hidden;
         animation: typewriter 3s steps(13) infinite alternate;
@@ -79,15 +92,16 @@
 
   .futureCollege {
     display: inline-block;
-    color: white;
+    color: rgb(49, 53, 71);
     font-size: 2.5rem;
-    font-family: 'Montserrat';
+    font-family: 'Gaegu', cursive;
     margin-top: 1rem;
   }
 
   .arrow {
     margin-top: 8rem;
-    color: white;
+    color: rgb(49, 53, 71);
+    /* color: rgb(141, 167, 153); */
     font-size: 2rem;
   }
 
@@ -139,4 +153,12 @@
       }
     }
   }
+}
+
+
+#navbar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40rem;
 }
