--- a/src/compontents/styles/StyleImgGallery.scss
+++ b/src/compontents/styles/StyleImgGallery.scss
@@ -1,17 +1,38 @@
 .imgGalleryBackground {
   width: 100vw;
   height: 100vh;
-  background-color: #282623;
+  background-color: rgb(49, 53, 71);
   font-family: 'Montserrat';
 
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  color: #FFFFFF;
 
- /*  .w-100 {
-    width: 30%;
-    color: red;
-    
-  } */
+  .aboutMeDivTwo {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 100%;
+
+    .text-content {
+      margin-top: -2.5rem;
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      width: 40%;
+    }
+
+    /* .profile-pic-div {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+    } */
+  }
+
+
 }
