--- a/src/compontents/styles/StyleFooter.scss
+++ b/src/compontents/styles/StyleFooter.scss
@@ -16,7 +16,7 @@
   h3 {
     max-width: 75%;
     text-align: center;
-    color: rgb(49, 53, 71);
+    color: #a4161a;
     font-family: 'Montserrat';
     font-size: 2rem;
     margin-bottom: 0;
@@ -26,14 +26,14 @@
     margin-bottom: 0;
     max-width: 75%;
     text-align: center;
-    color: rgb(49, 53, 71);
+    color: #a4161a;
     font-family: 'Montserrat';
     font-size: 1rem;
   }
 
   a {
     text-decoration: none;
-    color: rgba(108, 114, 139, 0.61);
+    color: rgba(175, 177, 186, 0.61);
     word-break: break-word;
   }
 
