--- a/src/compontents/styles/StyleHead.scss
+++ b/src/compontents/styles/StyleHead.scss
@@ -14,94 +14,123 @@
   background-repeat: no-repeat;
   background-size: cover;
 
-
-  h4 {
-    z-index: 1;
-    margin-top: 10rem;
-    max-width: 75%;
-    text-align: start;
-    /* color: white; */
-    font-family: 'Gaegu', cursive;
-    font-size: 2.5rem;
-    margin-bottom: 0;
-    color: rgb(49, 53, 71);
+  a {
+    text-decoration: none;
+    color: white;
+    word-break: break-word;
   }
 
-  
 
-  h1 {
+  .headerTwo {
     z-index: 1;
-    margin: 0;
-    max-width: 75%;
-    text-align: center;
-    color: rgb(49, 53, 71);
-    font-family: 'Gaegu', cursive;
-    font-size: 3rem;
-    margin-bottom: 0;
-
-    span {
-      z-index: 1;
-      display: inline-block;
-      font-weight: bolder;
-      color: rgb(67, 69, 78);
-      /* color: #FC0A9D; */
-      font-size: 3.5rem;
-      margin: 0;
-    }
-  }
-
-  .andImDiv {
-    z-index: 1;
-    margin-top: -1rem;
+    margin-top: -7rem;
+    width: 90%;
     display: flex;
+    justify-content: space-between;
+    font-family: 'Montserrat';
     flex-direction: row;
     align-items: center;
-    justify-content: center;
-    width: 80%;
 
-    h3 {
-      text-align: center;
-      color: rgb(49, 53, 71);
-      font-family: 'Gaegu', cursive;
-      font-size: 1.5rem;
+    .titlePortfolio {
+      font-size: 1.2rem;
+      color: aliceblue;
     }
+
+    .row {
+      display: flex;
+      flex-direction: row;
+      font-size: 2rem;
+      justify-content: space-around;
+    }
+  }
+
+  .videoStyle {
+    overflow: 'hidden';
+    filter: 'blur(10px)';
+
+  }
+
+  .flex {
+    z-index: 1;
+    /* background-color: rgba(209, 70, 60, 0.479); */
+    margin-top: 7rem;
+    align-self: baseline;
+    text-align: start;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    margin-left: 6rem;
+    width: 100%;
+
+    h4 {
+      color: white;
+      font-family: 'Montserrat';
+      font-size: 1rem;
+      margin-top: -2rem;
+      /*  color: rgb(49, 53, 71); */
+    }
+
+
+
+    h1 {
+      margin: 0;
+      color: white;
+      /*  color: rgb(49, 53, 71); */
+      font-family: 'Cedarville Cursive', cursive;
+      font-size: 3rem;
+      margin-bottom: 0;
+
+      span {
+        z-index: 1;
+        display: inline-block;
+        font-weight: bolder;
+        color: white;
+        /* color: #FC0A9D; */
+        font-size: 3.5rem;
+        margin: 0;
+      }
+    }
+
+    .andImDiv {
+      z-index: 1;
+      margin-top: -1rem;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      width: 80%;
+
+      h3 {
+        text-align: center;
+        color: rgb(49, 53, 71);
+        font-family: 'Gaegu', cursive;
+        font-size: 1.5rem;
+      }
+
       h2 {
         font-size: 1.5rem;
         padding: 4px 12px;
         color: rgb(49, 53, 71);
         font-family: 'Gaegu', cursive;
-        /* color: #FC0A9D; */
         white-space: nowrap;
         overflow: hidden;
-        animation: typewriter 3s steps(13) infinite alternate;
         border-right: 2px solid white;
       }
-      @keyframes typewriter {
-        from {
-          width: 0%;
-        }
-        to {
-          width: 102%;
-        }
-      
-     
     }
 
-  }
 
-
-  .futureCollege {
-    display: inline-block;
-    color: rgb(49, 53, 71);
-    font-size: 2.5rem;
-    font-family: 'Gaegu', cursive;
-    margin-top: 1rem;
+    .futureCollege {
+      display: inline-block;
+      color: rgb(49, 53, 71);
+      font-size: 2.5rem;
+      font-family: 'Gaegu', cursive;
+      margin-top: 1rem;
+    }
   }
 
   .arrow {
     margin-top: 8rem;
-    color: rgb(49, 53, 71);
-    /* color: rgb(141, 167, 153); */
+    color: white;
     font-size: 2rem;
   }
 
@@ -140,18 +169,70 @@
 @media screen and (max-width: 480px) {
   .header {
 
+
+    h4 {
+      margin-top: 7rem;
+      font-size: 1.3rem;
+      margin-bottom: 0;
+
+    }
+
     h1 {
-      max-width: 85%;
-      font-size: 1rem;
-      text-align: center;
-      color: white;
-      /* font-Family: 'Dawning of a New Day'; */
-      font-family: 'Montserrat';
+      margin: 0;
+      font-size: 1.7rem;
+      margin-bottom: 0;
 
       span {
-        font-size: 1.5rem;
+        font-size: 2rem;
+        margin: 0;
       }
     }
+
+    .andImDiv {
+      margin-top: -1rem;
+      width: 100%;
+
+      h3 {
+        text-align: center;
+        color: rgb(49, 53, 71);
+        font-family: 'Gaegu', cursive;
+        font-size: 1rem;
+      }
+
+      h2 {
+        font-size: 1rem;
+        padding: 4px 12px;
+
+
+
+      }
+
+      @keyframes typewriter {
+        from {
+          width: 0%;
+        }
+
+        to {
+          width: 102%;
+        }
+
+
+      }
+
+    }
+
+
+    .futureCollege {
+      display: inline-block;
+      font-size: 2rem;
+      margin-top: 1rem;
+    }
+
+    .arrow {
+      margin-top: 7rem;
+      font-size: 2rem;
+    }
+
   }
 }
 
@@ -162,3 +243,4 @@
   align-items: center;
   height: 40rem;
 }
+
