--- a/src/compontents/styles/StyleImgGallery.scss
+++ b/src/compontents/styles/StyleImgGallery.scss
@@ -1,7 +1,7 @@
 .imgGalleryBackground {
   width: 100vw;
   height: 100vh;
-  background-color: rgb(49, 53, 71);
+  background-color: #a4161a;
   font-family: 'Montserrat';
 
   background-attachment: fixed;
@@ -24,6 +24,12 @@
       align-items: center;
       flex-direction: column;
       width: 40%;
+
+      .textStyle {
+        font-family: 'Cedarville Cursive', cursive;
+        font-size: 2rem;
+        color: white;
+      }
     }
 
     /* .profile-pic-div {
