--- a/src/compontents/styles/StyleHead.scss
+++ b/src/compontents/styles/StyleHead.scss
@@ -1,11 +1,11 @@
-.header {
+.headerBackground {
   width: 100vw;
   height: 100vh;
   background-color: white;
   /* background-color: #282623; */
   background-image: linear-gradient(to bottom, #282623);
   display: flex;
-  justify-content: center;
+  /*  justify-content: center; */
   align-items: center;
   flex-direction: column;
 
@@ -16,14 +16,13 @@
 
   a {
     text-decoration: none;
-    color: white;
+    color: black;
     word-break: break-word;
   }
 
 
-  .headerTwo {
+  .headerTop {
     z-index: 1;
-    margin-top: -7rem;
     width: 90%;
     display: flex;
     justify-content: space-between;
@@ -33,7 +32,8 @@
 
     .titlePortfolio {
       font-size: 1.2rem;
-      color: aliceblue;
+      /* color: aliceblue; */
+
     }
 
     .row {
@@ -50,83 +50,66 @@
 
   }
 
-  .flex {
-    z-index: 1;
-    /* background-color: rgba(209, 70, 60, 0.479); */
-    margin-top: 7rem;
-    align-self: baseline;
-    text-align: start;
+
+  .flexAbsolute {
     display: flex;
-    justify-content: flex-start;
-    flex-direction: column;
-    margin-left: 6rem;
+    /* align-items: center; */
+    /* justify-content: center; */
+    flex-direction: row;
+    /* text-align: start; */
+    /*  z-index: 1; */
+    /* background-color: rgba(209, 70, 60, 0.479); */
+    margin-top: 3rem;
+    /*  margin-left: 6rem; */
     width: 100%;
 
-    h4 {
-      color: white;
-      font-family: 'Montserrat';
-      font-size: 1rem;
-      margin-top: -2rem;
-      /*  color: rgb(49, 53, 71); */
-    }
-
-
-
-    h1 {
+    .flexName {
+      flex-wrap: wrap;
+      z-index: 1;
       margin: 0;
-      color: white;
-      /*  color: rgb(49, 53, 71); */
-      font-family: 'Cedarville Cursive', cursive;
-      font-size: 3rem;
-      margin-bottom: 0;
+      position: absolute;
+   /*    top: 8px;
+      left: 16px; */
 
-      span {
-        z-index: 1;
-        display: inline-block;
+      h4 {
         font-weight: bolder;
-        color: white;
+        color: black;
         /* color: #FC0A9D; */
         font-size: 3.5rem;
+        font-family: 'Montserrat';
+        font-size: 1rem;
         margin: 0;
+        /*  color: rgb(49, 53, 71); */
       }
-    }
 
-    .andImDiv {
+      h1 {
+        /*  color: rgb(49, 53, 71); */
+        font-family: 'Cedarville Cursive', cursive;
+        font-size: 3rem;
+        margin: -2rem;
+        font-weight: bolder;
+
+      }
+
+      /*  span {
       z-index: 1;
-      margin-top: -1rem;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: center;
-      width: 80%;
-
-      h3 {
-        text-align: center;
-        color: rgb(49, 53, 71);
-        font-family: 'Gaegu', cursive;
-        font-size: 1.5rem;
-      }
-
-      h2 {
-        font-size: 1.5rem;
-        padding: 4px 12px;
-        color: rgb(49, 53, 71);
-        font-family: 'Gaegu', cursive;
-        white-space: nowrap;
-        overflow: hidden;
-        border-right: 2px solid white;
-      }
-    }
-
-
-    .futureCollege {
       display: inline-block;
-      color: rgb(49, 53, 71);
-      font-size: 2.5rem;
-      font-family: 'Gaegu', cursive;
-      margin-top: 1rem;
+      font-weight: bolder;
+      color: black;
+      /* color: #FC0A9D; */
+      /* font-size: 3.5rem; */
+      /* margin: 0;
+     } */
+
     }
-  }
+
+    .flexSelfie {
+      #selfieNew {
+        width: 50rem;
+      }
+    }
+
+  
 
   .arrow {
     margin-top: 8rem;
@@ -244,3 +227,51 @@
   height: 40rem;
 }
 
+
+
+/* ingen kod som används ... */
+
+/* .andImDiv {
+      z-index: 1;
+      display: flex;
+
+
+      /* flex-direction: row; */
+/* align-items: center;
+      justify-content: center; */
+/* width: 80%; */
+
+/* h3 {
+        text-align: center;
+        color: rgb(49, 53, 71);
+        font-family: 'Gaegu', cursive;
+        font-size: 1.5rem;
+      }
+
+      h2 {
+        font-size: 1.5rem;
+        padding: 4px 12px;
+        color: rgb(49, 53, 71);
+        font-family: 'Gaegu', cursive;
+        white-space: nowrap;
+        overflow: hidden;
+        border-right: 2px solid white;
+      } */
+/* }
+ */
+
+/*  .futureCollege {
+       display: inline-block;
+       color: rgb(49, 53, 71);
+       font-size: 2.5rem;
+       font-family: 'Gaegu', cursive;
+       margin-top: 1rem;
+     } */
+
+      /* <div className="andImDiv">
+        <div><h3>And I'm a </h3></div>
+        <div><h2>frontend developer who is looking for a job</h2></div>
+      </div> */
+
+
+            /*  <h4 className="futureCollege">Maybe I'm your future colleague?</h4> */}
