--- a/src/compontents/styles/StyleSkills.scss
+++ b/src/compontents/styles/StyleSkills.scss
@@ -1,15 +1,20 @@
 .skill {
   width: 100vw;
   height: 100vh;
-  background-color: #a4161a;
+  background-color: white;
   /* background-color: #282623; */
+  background-image: linear-gradient(to bottom, #282623);
+  display: flex;
+  /*  justify-content: center; */
+  align-items: center;
+  flex-direction: column;
   font-family: 'Montserrat';
 
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  color: white;
+  font-weight: bold;
 
   .skillDesign {
     background-color: white;
@@ -33,7 +38,8 @@
       .textStyle {
         font-family: 'Cedarville Cursive', cursive;
         font-size: 2rem;
-        color: white;
+        color: black;
+        margin: 0;
       }
 
       .btnDiv {
@@ -60,10 +66,10 @@
 
       .line1 {
         background: linear-gradient(to right,
-        rgba(171, 171, 173, 0.61) 0%,
+        black 0%,
+        black  90%,
         rgba(171, 171, 173, 0.61)  90%,
-            white 90%,
-            white 100%);
+        rgba(171, 171, 173, 0.61) 100%);
         width: 95%;
         height: 30%;
         width: 90%;
@@ -75,10 +81,10 @@
 
       .line2 {
         background: linear-gradient(to right,
-        rgba(171, 171, 173, 0.61)  0%,
+        black  0%,
+        black  80%,
         rgba(171, 171, 173, 0.61)  80%,
-            white 80%,
-            white 100%);
+        rgba(171, 171, 173, 0.61)  100%);
         width: 95%;
         height: 30%;
         width: 90%;
@@ -90,10 +96,10 @@
 
       .line3 {
         background: linear-gradient(to right,
-        rgba(171, 171, 173, 0.61)  0%,
+        black  0%,
+        black  60%,
         rgba(171, 171, 173, 0.61)  60%,
-            white 60%,
-            white 100%);
+            rgba(171, 171, 173, 0.61)  100%);
         width: 95%;
         height: 30%;
         width: 90%;
@@ -105,10 +111,10 @@
 
       .line4 {
         background: linear-gradient(to right,
-        rgba(171, 171, 173, 0.61)  0%,
+        black  0%,
+        black  20%,
         rgba(171, 171, 173, 0.61)  20%,
-            white 20%,
-            white 100%);
+        rgba(171, 171, 173, 0.61)  100%);
         width: 95%;
         height: 30%;
         width: 90%;
@@ -120,10 +126,10 @@
 
       .line5 {
         background: linear-gradient(to right,
-        rgba(171, 171, 173, 0.61)  0%,
-        rgba(171, 171, 173, 0.61)  35%,
-            white 35%,
-            white 100%);
+        black  0%,
+        black  35%,
+        rgba(171, 171, 173, 0.61) 35%,
+        rgba(171, 171, 173, 0.61)  100%);
         width: 95%;
         height: 30%;
         width: 90%;
